# DONERF

./: CONTRIBUTING.md  LICENCE_third_party.md  LICENSE_TensorRT.md  LICENSE_third_party.md  README.md  requirements.txt
configs/: DONeRF_2_samples.ini  NeRF_coarse_only_128_samples.ini  NeRF_coarse_only_128_samples_log+warp_huge.ini  NeRF_coarse_plus_fine.ini
src/: camera.py  comparison.py  datasets.py  evaluate.py  export.py  features.py  losses.py  models.py  native_extensions.py  nerf_raymarch_common.py  plots.py  prepare_dataset.py  sampled_sequence.py  test.py  train.py  train_data.py
src/native/: disc_depth_multiclass.cpp  disc_depth_multiclass_cuda.cu
src/util/: IW_SSIM_PyTorch.py  config.py  depth_transformations.py  feature_encoding.py  flip_loss.py  helper.py  raygeneration.py  saveimage.py
tensorrt_real_time_viewer/: .gitignore  CMakeLists.txt  README.md
tensorrt_real_time_viewer/dependencies/GLSL_build_tools/source/: GLSLStream.cpp  GLSLStream.h  Log.h  StdStreamLog.cpp  StdStreamLog.h  glsl2cpp.cpp  interface.h  io.h  main.cpp
tensorrt_real_time_viewer/dependencies/GLSL_build_tools/source/EmbedGLSL/: AssemblyInfo.cs  CommandLine.cs  Dependencies.cs  EmbedGLSL.cs  LogListener.cs
tensorrt_real_time_viewer/dependencies/GLSL_build_tools/source/test/: bla.glsl  test.cpp
tensorrt_real_time_viewer/dependencies/GL_core_tools/include/GL/: buffer.h  error.h  event.h  framebuffer.h  sampler.h  scoped_name.h  shader.h  texture.h  transform_feedback.h  unique_name.h  vertex_array.h
tensorrt_real_time_viewer/dependencies/GL_core_tools/source/: buffer.cpp  error.cpp  event.cpp  framebuffer.cpp  shader.cpp  texture.cpp  transform_feedback.cpp  vertex_array.cpp
tensorrt_real_time_viewer/dependencies/GL_platform_tools/include/GL/platform/: Application.h  Context.h  DefaultDisplayHandler.h  DisplayHandler.h  InputHandler.h  Renderer.h  Window.h  interface.h
tensorrt_real_time_viewer/dependencies/GL_platform_tools/source/: DefaultDisplayHandler.cpp
tensorrt_real_time_viewer/dependencies/GL_platform_tools/source/egl/glcore/: context.cpp  context.h
tensorrt_real_time_viewer/dependencies/GL_platform_tools/source/egl/include/: glcore.h
tensorrt_real_time_viewer/dependencies/GL_platform_tools/source/egl/include/GL/: gl.h
tensorrt_real_time_viewer/dependencies/GL_platform_tools/source/win32/: Win32GLApplication.cpp  Win32GLApplication.h  Win32GLContext.cpp  Win32GLContext.h  Win32GLWindow.cpp  Win32GLWindow.h  Win32Input.h  wglext.h
tensorrt_real_time_viewer/dependencies/GL_platform_tools/source/win32/glcore/: DllMain.cpp  context.cpp  context.h
tensorrt_real_time_viewer/dependencies/GL_platform_tools/source/win32/include/GL/: gl.h
tensorrt_real_time_viewer/dependencies/GL_platform_tools/source/win32/include/win32/: glcore.h
tensorrt_real_time_viewer/dependencies/GL_platform_tools/source/x11/: X11ColormapHandle.h  X11Display.cpp  X11Display.h  X11GLApplication.cpp  X11GLApplication.h  X11GLContext.cpp  X11GLContext.h  X11GLWindow.cpp  X11GLWindow.h  X11Input.h  X11WindowHandle.h  glxext.h  platform.h  x11_ptr.h
tensorrt_real_time_viewer/dependencies/Win32_core_tools/include/win32/: WindowClass.h  com_error.h  com_ptr.h  com_utility.h  error.h  event.h  file.h  handle_deleter.h  memory.h  module_handle.h  platform.h  scoped_handle.h  unicode.h  unique_handle.h  window_handle.h
tensorrt_real_time_viewer/dependencies/Win32_core_tools/source/: error.cpp  event.cpp  unicode.cpp
tensorrt_real_time_viewer/include/: basicbuffermanager.h  bmp.h  buffermanager.h  camera.h  config.h  encoding.h  featureset.h  helper.h  imagegenerator.h  inputhandler.h  interoprenderbuffer.h  neuralrenderer.h  settings.h
tensorrt_real_time_viewer/include/cuda/: donerf_cuda_helper.h  donerf_cuda_kernels.cuh  helper_math.h
tensorrt_real_time_viewer/sample/: config.ini  dataset_info.txt  model0.onnx  model1.onnx
tensorrt_real_time_viewer/src/: basicbuffermanager.cpp  camera.cpp  config.cpp  encoding.cpp  featureset.cpp  imagegenerator.cpp  inputhandler.cpp  interoprenderbuffer.cpp  main.cpp  neuralrenderer.cpp  settings.cpp
tensorrt_real_time_viewer/src/cuda/: base_cuda_kernels.cu  coarse_cuda_kernels.cu
